optimize responsive behavior with paddings

--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -35,50 +35,50 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="info u-margin-bottom-big">
-          <div class="row">
-            <div class="col-1-of-2">
-              <h2 class="heading-secondary u-margin-bottom-big">
-                Rösterei & Café
-              </h2>
-              <p class="paragraph u-margin-bottom-medium">
-                Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
-                Rösterei, serviert im gemütlichen Café in der Innenstadt.
-              </p>
-              <div class="row">
-                <div class="col-1-of-2">
-                  <p class="paragraph">
-                    <span class="paragraph__anthrazit--block"
-                      >Komm vorbei!</span
-                    >
-                    <span class="paragraph__anthrazit--block"
-                      >Fraunhoferstr. 13, Kiel</span
-                    >
-                  </p>
-                </div>
-                <div class="col-1-of-2">
-                  <p class="paragraph">
-                    <span class="paragraph__anthrazit--block"
-                      >Mo – Fr 8–18 Uhr</span
-                    >
-                    <span class="paragraph__anthrazit--block"
-                      >Sa 11–18 Uhr</span
-                    >
-                  </p>
+        <div class="push-container">
+          <div class="info u-margin-bottom-big">
+            <div class="row">
+              <div class="col-1-of-2">
+                <h2 class="heading-secondary u-margin-bottom-big">
+                  Rösterei & Café
+                </h2>
+                <p class="paragraph u-margin-bottom-medium">
+                  Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen
+                  Rösterei, serviert im gemütlichen Café in der Innenstadt.
+                </p>
+                <div class="row">
+                  <div class="col-1-of-2">
+                    <p class="paragraph">
+                      <span class="paragraph__anthrazit--block"
+                        >Komm vorbei!</span
+                      >
+                      <span class="paragraph__anthrazit--block"
+                        >Fraunhoferstr. 13, Kiel</span
+                      >
+                    </p>
+                  </div>
+                  <div class="col-1-of-2">
+                    <p class="paragraph">
+                      <span class="paragraph__anthrazit--block"
+                        >Mo – Fr 8–18 Uhr</span
+                      >
+                      <span class="paragraph__anthrazit--block"
+                        >Sa 11–18 Uhr</span
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-1-of-2">
-              <img
-                src="../img/FEND-Coffee-machine-2.png"
-                alt="coffee machine"
-                class="section-about_image crop__center"
-              />
+              <div class="col-1-of-2">
+                <img
+                  src="../img/FEND-Coffee-machine-2.png"
+                  alt="coffee machine"
+                  class="section-about_image crop__center"
+                />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="info">
-          <div class="info-push">
+          <div class="info center-container">
             <h2 class="heading-secondary u-margin-bottom-big">
               Frisches Gebäck von nebenan
             </h2>
@@ -98,50 +98,52 @@
       </section>
 
       <section class="section-gallery">
-        <div class="row">
-          <div class="col-1-of-4">
-            <img
-              src="../img/FEND-danish 1.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image u-margin-bottom-gallery"
-            /><img
-              src="../img/FEND-Coffee-sign.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image"
-            />
-          </div>
-          <div class="col-1-of-4">
-            <img
-              src="../img/FEND-Coffee-latte-art-2.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image u-margin-bottom-gallery"
-            /><img
-              src="../img/FEND-Coffee-latte-art-3.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image"
-            />
-          </div>
-          <div class="col-1-of-4">
-            <img
-              src="../img/FEND-Coffee-machine.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image u-margin-bottom-gallery"
-            /><img
-              src="../img/FEND-Coffee-latte-art.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image"
-            />
-          </div>
-          <div class="col-1-of-4">
-            <img
-              src="../img/FEND-coffee-list.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image u-margin-bottom-gallery"
-            /><img
-              src="../img/FEND-coffee-breakfast 1.png"
-              alt="coffee machine"
-              class="section-gallery gallery-image"
-            />
+        <div class="push-container">
+          <div class="row">
+            <div class="col-1-of-4">
+              <img
+                src="../img/FEND-danish 1.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image u-margin-bottom-gallery"
+              /><img
+                src="../img/FEND-Coffee-sign.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image"
+              />
+            </div>
+            <div class="col-1-of-4">
+              <img
+                src="../img/FEND-Coffee-latte-art-2.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image u-margin-bottom-gallery"
+              /><img
+                src="../img/FEND-Coffee-latte-art-3.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image"
+              />
+            </div>
+            <div class="col-1-of-4">
+              <img
+                src="../img/FEND-Coffee-machine.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image u-margin-bottom-gallery"
+              /><img
+                src="../img/FEND-Coffee-latte-art.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image"
+              />
+            </div>
+            <div class="col-1-of-4">
+              <img
+                src="../img/FEND-coffee-list.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image u-margin-bottom-gallery"
+              /><img
+                src="../img/FEND-coffee-breakfast 1.png"
+                alt="coffee machine"
+                class="section-gallery gallery-image"
+              />
+            </div>
           </div>
         </div>
       </section>
