add and finish section origin

--- a/src/my-subpage/imprint.html
+++ b/src/my-subpage/imprint.html
@@ -35,48 +35,54 @@
       <section class="section-imprint"></section>
 
       <section class="section-footer">
-        <div class="row">
-          <div class="col-1-of-2">
-            <p class="footer__logo-box">
-              <img
-                src="../logo/Logo.svg"
-                alt="Logo"
-                class="footer__logo icon_filter--white"
-              />
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-1-of-4">
-            <h3 class="heading-tertiary--main">Rustica</h3>
-            <h3 class="heading-tertiary--sub">Rösterei & Café</h3>
-          </div>
-          <div class="col-1-of-4">
-            <p class="paragraph__white u-margin-bottom-medium">
-              <span class="paragraph__white--block"> Komm uns besuchen!</span>
-              <span class="paragraph__white--block"
-                >Fraunhoferstr. 13, Kiel</span
-              >
-            </p>
-            <p class="paragraph__white">
-              <span class="paragraph__white--block">Mo – Fr 8–18 Uhr </span>
-              <span class="paragraph__white--block">Sa 11–18 Uhr</span>
-            </p>
-          </div>
-          <div class="col-1-of-4">
-            <div class="link">
-              <div class="link__footer">
-                <a href="#" class="link__footer--white">Café</a>
-                <a href="#" class="link__footer--white">Shop</a>
-                <a href="#" class="link__footer--white">Herkunft</a>
-              </div>
+        <div class="push-container">
+          <div class="row">
+            <div class="col-1-of-2">
+              <p class="footer__logo-box">
+                <img
+                  src="../logo/Logo.svg"
+                  alt="Logo"
+                  class="footer__logo icon_filter--white"
+                />
+              </p>
             </div>
           </div>
-          <div class="col-1-of-4">
-            <div class="link">
-              <div class="link__footer">
-                <a href="#" class="link__footer--white">Datenschutz</a>
-                <a href="imprint.html" class="link__footer--white">Impressum</a>
+          <div class="row">
+            <div class="col-1-of-4">
+              <h3 class="heading-tertiary--main">Rustica</h3>
+              <h3 class="heading-tertiary--sub">Rösterei & Café</h3>
+            </div>
+            <div class="col-1-of-4">
+              <p class="paragraph__white u-margin-bottom-medium">
+                <span class="paragraph__white--block"> Komm uns besuchen!</span>
+                <span class="paragraph__white--block"
+                  >Fraunhoferstr. 13, Kiel</span
+                >
+              </p>
+              <p class="paragraph__white">
+                <span class="paragraph__white--block">Mo – Fr 8–18 Uhr </span>
+                <span class="paragraph__white--block">Sa 11–18 Uhr</span>
+              </p>
+            </div>
+            <div class="col-1-of-4">
+              <div class="link">
+                <div class="link__footer">
+                  <a href="#" class="link__footer--white">Café</a>
+                  <a href="#" class="link__footer--white">Shop</a>
+                  <a href="#" class="link__footer--white">Herkunft</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="link">
+                <div class="link__footer">
+                  <a href="#" class="link__footer--white">Datenschutz</a>
+                  <a
+                    href="../my-subpage/imprint.html"
+                    class="link__footer--white"
+                    >Impressum</a
+                  >
+                </div>
               </div>
             </div>
           </div>
