add and finish imprint

--- a/src/my-subpage/shop.html
+++ b/src/my-subpage/shop.html
@@ -3,14 +3,121 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Rustica ist eine Kaffee-Rösterei mit angeschlossenem Café. 
+      Hier wird der Kaffee seit 1991, fair und bio, direkt im Herzen von Kiel produziert."
+    />
+    <meta name="keywords" content="Kiel, Kaffee, Rösterei, Café, bio, fair" />
     <title>Rustica Rösterei & Café: Shop</title>
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <nav class="nav">
+      <div class="nav-overall">
+        <div class="header__logo-box">
+          <a href="../index.html">
+            <img
+              src="../logo/Logo.svg"
+              alt="Logo"
+              class="header__logo icon_filter--white"
+          /></a>
+        </div>
+        <ul class="nav-line">
+          <li class="nav-menu">
+            <a class="link-underline" href="cafe.html">das Café</a>
+          </li>
+          <li class="nav-menu">
+            <a class="link-underlined" href="origin.html">Herkunft</a>
+          </li>
+          <li class="nav-menu">
+            <a class="link-underline" href="shop.html">Shop</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <header class="header-shop">
+      <div class="header__text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">Shop</span>
+          <span class="heading-primary--sub"></span>
+        </h1>
+      </div>
+    </header>
     <main>
-      <div class="hero">HERO</div>
-      <a href="/">Home</a>
+      <section class="section-about">
+        <div class="push-container">
+          <div class="info center-container">
+            <h2 class="heading-secondary u-margin-bottom-big">Der Shop</h2>
+            <p class="paragraph u-margin-bottom-big">
+              Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und
+              Konsonantien leben die Blindtexte. Abgeschieden wohnen sie in
+              Buchstabhausen an der Küste des Semantik, eines großen
+              Sprachozeans. Ein kleines Bächlein namens Duden fließt durch ihren
+              Ort und versorgt sie mit den nötigen Regelialien. Es ist ein
+              paradiesmatisches Land, in dem einem gebratene Satzteile in den
+              Mund fliegen.Nicht einmal von der allmächtigen Interpunktion
+              werden die Blindtexte beherrscht – ein geradezu unorthographisches
+              Leben.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-footer">
+        <div class="push-container">
+          <div class="row">
+            <div class="col-1-of-2">
+              <p class="footer__logo-box">
+                <img
+                  src="../logo/Logo.svg"
+                  alt="Logo"
+                  class="footer__logo icon_filter--white"
+                />
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-1-of-4">
+              <h3 class="heading-tertiary--main">Rustica</h3>
+              <h3 class="heading-tertiary--sub">Rösterei & Café</h3>
+            </div>
+            <div class="col-1-of-4">
+              <p class="paragraph__white u-margin-bottom-medium">
+                <span class="paragraph__white--block"> Komm uns besuchen!</span>
+                <span class="paragraph__white--block"
+                  >Fraunhoferstr. 13, Kiel</span
+                >
+              </p>
+              <p class="paragraph__white">
+                <span class="paragraph__white--block">Mo – Fr 8–18 Uhr </span>
+                <span class="paragraph__white--block">Sa 11–18 Uhr</span>
+              </p>
+            </div>
+            <div class="col-1-of-4">
+              <div class="link">
+                <div class="link__footer">
+                  <a href="#" class="link__footer--white">Café</a>
+                  <a href="#" class="link__footer--white">Shop</a>
+                  <a href="#" class="link__footer--white">Herkunft</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="link">
+                <div class="link__footer">
+                  <a href="#" class="link__footer--white">Datenschutz</a>
+                  <a
+                    href="../my-subpage/imprint.html"
+                    class="link__footer--white"
+                    >Impressum</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="../js/index.js"></script>
   </body>
