--- a/src/my-subpage/origin.html
+++ b/src/my-subpage/origin.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Rustica ist eine Kaffee-Rösterei mit angeschlossenem Café. 
+      Hier wird der Kaffee seit 1991, fair und bio, direkt im Herzen von Kiel produziert."
+    />
+    <meta name="keywords" content="Kiel, Kaffee, Rösterei, Café, bio, fair" />
     <title>Rustica Rösterei & Café: Herkunft</title>
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
