--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
     />
   </head>
   <body>
-    <nav class="nav">
-      <div class="nav-overall">
+    <nav class="navD">
+      <div class="navD-overall">
         <div class="header__logo-box">
           <a href="index.html">
             <img
@@ -29,19 +29,45 @@
               class="header__logo icon_filter--white"
           /></a>
         </div>
-        <ul class="nav-line">
-          <li class="nav-menu">
+        <ul class="navD-line">
+          <li class="navD-menu">
             <a class="link-underline" href="my-subpage/cafe.html">das Café</a>
           </li>
-          <li class="nav-menu">
+          <li class="navD-menu">
             <a class="link-underline" href="my-subpage/origin.html">Herkunft</a>
           </li>
-          <li class="nav-menu">
+          <li class="navD-menu">
             <a class="link-underline" href="my-subpage/shop.html">Shop</a>
           </li>
         </ul>
       </div>
     </nav>
+    <div class="navM overlay">
+      <div class="navM-overall">
+        <div class="header__logo-box">
+          <a href="#">
+            <img
+              src="logo/Logo.svg"
+              alt="Logo"
+              class="header__logo icon_filter--white"
+          /></a>
+        </div>
+        <ul class="navM-line">
+          <li class="navM-menu">
+            <img
+              src="icn/Burger Menu.svg"
+              alt="hamburger menu"
+              class="hamburger-menu icon_filter--white"
+            />
+          </li>
+          <div class="overlay-content">
+            <a class="" href="#">das Cafe</a>
+            <a class="" href="#">Herkunft</a>
+            <a class="" href="#">Shop</a>
+          </div>
+        </ul>
+      </div>
+    </div>
     <header class="header">
       <div class="header__text-box">
         <h1 class="heading-primary">
@@ -311,14 +337,14 @@
             </div>
             <div class="col-1-of-2">
               <div class="row">
-                <div class="col-1-of-2">
+                <div class="col-1-of-4">
                   <img
                     src="icn/Icon Kaffee Tasse.svg"
                     alt="Icon Cup of Coffee"
                     class="icon__explore icon_filter--anthrazit"
                   />
                 </div>
-                <div class="col-1-of-2">
+                <div class="col-3-of-4">
                   <p
                     class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
                   >
@@ -329,14 +355,14 @@
               </div>
 
               <div class="row">
-                <div class="col-1-of-2">
+                <div class="col-1-of-4">
                   <img
                     src="icn/Icon Kaffee Tasse.svg"
                     alt="Icon Cup of Coffee"
                     class="icon__explore icon_filter--anthrazit"
                   />
                 </div>
-                <div class="col-1-of-2">
+                <div class="col-3-of-4">
                   <p
                     class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
                   >
@@ -346,14 +372,14 @@
               </div>
 
               <div class="row">
-                <div class="col-1-of-2">
+                <div class="col-1-of-4">
                   <img
                     src="icn/Icon-Kaffee Pflanze.svg"
                     alt="Icon Coffee Plant"
                     class="icon__explore icon_filter--anthrazit"
                   />
                 </div>
-                <div class="col-1-of-2">
+                <div class="col-3-of-4">
                   <p
                     class="paragraph__anthrazit--incredient line u-margin-bottom-medium"
                   >
