fix small probs

--- a/src/index.html
+++ b/src/index.html
@@ -133,15 +133,16 @@
               </div>
               <div class="col-1-of-2">
                 <div class="info-push">
-                  <h2 class="heading-secondary u-margin-bottom-big">
+                  <h3 class="heading-tertiary--black u-margin-bottom-big">
                     Bio und Fair
-                  </h2>
-                  <p class="paragraph">
+                  </h3>
+                  <p class="paragraph u-margin-bottom-small">
                     Weit hinten, hinter den Wortbergen, fern der Länder Vokalien
                     und Konsonantien leben die Blindtexte. Weit hinten, hinter
                     den Wortbergen, fern der Länder Vokalien und Konsonantien
                     leben die Blindtexte. Und das alles in bester Bio Qualität
                   </p>
+                  <a href="#" class="link__origin--black">mehr</a>
                 </div>
               </div>
             </div>
