--- a/src/my-subpage/imprint.html
+++ b/src/my-subpage/imprint.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
   <body>
-    <nav class="navb">
-      <div class="navb-overall">
+    <nav class="navD">
+      <div class="navD-overall">
         <div class="header__logo-box">
           <a href="../index.html">
             <img
@@ -23,19 +23,49 @@
               class="header__logo icon_filter--black"
           /></a>
         </div>
-        <ul class="nav-line">
-          <li class="nav-menu">
-            <a class="linkb-underline" href="cafe.html">das Café</a>
+        <ul class="navD-line">
+          <li class="navD-menu">
+            <a class="linkb-underline" href="../my-subpage/cafe.html"
+              >das Café</a
+            >
           </li>
-          <li class="nav-menu">
-            <a class="linkb-underline" href="origin.html">Herkunft</a>
+          <li class="navD-menu">
+            <a class="linkb-underline" href="../my-subpage/origin.html"
+              >Herkunft</a
+            >
           </li>
-          <li class="nav-menu">
-            <a class="linkb-underline" href="shop.html">Shop</a>
+          <li class="navD-menu">
+            <a class="linkb-underline" href="../my-subpage/shop.html">Shop</a>
           </li>
         </ul>
       </div>
     </nav>
+    <div class="navM overlay">
+      <div class="navM-overall">
+        <div class="header__logo-box">
+          <a href="../index.html">
+            <img
+              src="../logo/Logo.svg"
+              alt="Logo"
+              class="header__logo icon_filter--black"
+          /></a>
+        </div>
+        <ul class="navM-line">
+          <li class="navM-menu">
+            <img
+              src="../icn/Burger Menu.svg"
+              alt="hamburger menu"
+              class="hamburger-menu icon_filter--black"
+            />
+          </li>
+          <div class="overlay-content">
+            <a class="" href="#">das Cafe</a>
+            <a class="" href="#">Herkunft</a>
+            <a class="" href="#">Shop</a>
+          </div>
+        </ul>
+      </div>
+    </div>
 
     <main>
       <section class="section-imprint">
