--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -139,44 +139,44 @@
             <div class="col-1-of-4">
               <img
                 src="../img/FEND-danish 1.png"
-                alt="coffee machine"
+                alt="pasteries and croissants"
                 class="section-gallery gallery-image u-margin-bottom-gallery"
               /><img
                 src="../img/FEND-Coffee-sign.png"
-                alt="coffee machine"
+                alt="coffee sign"
                 class="section-gallery gallery-image"
               />
             </div>
             <div class="col-1-of-4">
               <img
                 src="../img/FEND-Coffee-latte-art-2.png"
-                alt="coffee machine"
+                alt="four coffees on table"
                 class="section-gallery gallery-image u-margin-bottom-gallery"
               /><img
                 src="../img/FEND-Coffee-latte-art-3.png"
-                alt="coffee machine"
+                alt="friends with coffee"
                 class="section-gallery gallery-image"
               />
             </div>
             <div class="col-1-of-4">
               <img
-                src="../img/FEND-Coffee-machine.png"
+                src="../img/FEND-coffee-machine.png"
                 alt="coffee machine"
                 class="section-gallery gallery-image u-margin-bottom-gallery"
               /><img
                 src="../img/FEND-Coffee-latte-art.png"
-                alt="coffee machine"
+                alt="barista"
                 class="section-gallery gallery-image"
               />
             </div>
             <div class="col-1-of-4">
               <img
                 src="../img/FEND-coffee-list.png"
-                alt="coffee machine"
+                alt="price list"
                 class="section-gallery gallery-image u-margin-bottom-gallery"
               /><img
                 src="../img/FEND-coffee-breakfast 1.png"
-                alt="coffee machine"
+                alt="coffee and breakfast"
                 class="section-gallery gallery-image"
               />
             </div>
