add contact page

--- a/src/my-subpage/cafe.html
+++ b/src/my-subpage/cafe.html
@@ -238,11 +238,11 @@
             <div class="col-1-of-4">
               <div class="link">
                 <div class="link__footer">
-                  <a href="#" class="link__footer--white">Datenschutz</a>
-                  <a
-                    href="../my-subpage/imprint.html"
-                    class="link__footer--white"
+                  <a href="imprint.html" class="link__footer--white"
                     >Impressum</a
+                  >
+                  <a href="contact.html" class="link__footer--white"
+                    >Datenschutz</a
                   >
                 </div>
               </div>
