--- a/src/my-subpage/contact.html
+++ b/src/my-subpage/contact.html
@@ -9,7 +9,7 @@
       Hier wird der Kaffee seit 1991, fair und bio, direkt im Herzen von Kiel produziert."
     />
     <meta name="keywords" content="Kiel, Kaffee, Rösterei, Café, bio, fair" />
-    <title>Rustica Rösterei & Café: Shop</title>
+    <title>Rustica Rösterei & Café: Impressum</title>
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
   <body>
@@ -20,22 +20,22 @@
             <img
               src="../logo/Logo.svg"
               alt="Logo"
-              class="header__logo icon_filter--white"
+              class="header__logo icon_filter--black"
           /></a>
         </div>
         <ul class="navD-line">
           <li class="navD-menu">
-            <a class="link-underline" href="../my-subpage/cafe.html"
+            <a class="linkb-underline" href="../my-subpage/cafe.html"
               >das Café</a
             >
           </li>
           <li class="navD-menu">
-            <a class="link-underline" href="../my-subpage/origin.html"
+            <a class="linkb-underline" href="../my-subpage/origin.html"
               >Herkunft</a
             >
           </li>
           <li class="navD-menu">
-            <a class="link-underlined" href="../my-subpage/shop.html">Shop</a>
+            <a class="linkb-underline" href="../my-subpage/shop.html">Shop</a>
           </li>
         </ul>
       </div>
@@ -47,7 +47,7 @@
             <img
               src="../logo/Logo.svg"
               alt="Logo"
-              class="header__logo icon_filter--white"
+              class="header__logo icon_filter--black"
           /></a>
         </div>
         <ul class="navM-line">
@@ -55,7 +55,7 @@
             <img
               src="../icn/Burger Menu.svg"
               alt="hamburger menu"
-              class="hamburger-menu icon_filter--white"
+              class="hamburger-menu icon_filter--black"
             />
           </li>
           <div class="overlay-content">
@@ -66,30 +66,18 @@
         </ul>
       </div>
     </div>
-    <header class="header-shop">
-      <div class="header__text-box">
-        <h1 class="heading-primary">
-          <span class="heading-primary--main">Shop</span>
-          <span class="heading-primary--sub"></span>
-        </h1>
-      </div>
-    </header>
+
     <main>
-      <section class="section-about">
+      <section class="contact-form">
         <div class="push-container">
-          <div class="info center-container">
-            <h2 class="heading-secondary u-margin-bottom-big">Der Shop</h2>
-            <p class="paragraph u-margin-bottom-big">
-              Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und
-              Konsonantien leben die Blindtexte. Abgeschieden wohnen sie in
-              Buchstabhausen an der Küste des Semantik, eines großen
-              Sprachozeans. Ein kleines Bächlein namens Duden fließt durch ihren
-              Ort und versorgt sie mit den nötigen Regelialien. Es ist ein
-              paradiesmatisches Land, in dem einem gebratene Satzteile in den
-              Mund fliegen.Nicht einmal von der allmächtigen Interpunktion
-              werden die Blindtexte beherrscht – ein geradezu unorthographisches
-              Leben.
-            </p>
+          <div class="row">
+            <div class="col-1-of-2">
+              <h2 class="heading-secondary">
+                Du hast Fragen? <br />
+                Schreib uns gern!
+              </h2>
+            </div>
+            <div class="col-1-of-2"></div>
           </div>
         </div>
       </section>
