--- a/src/index.html
+++ b/src/index.html
@@ -448,9 +448,11 @@
             <div class="col-1-of-4">
               <div class="link">
                 <div class="link__footer">
-                  <a href="#" class="link__footer--white">Datenschutz</a>
                   <a href="my-subpage/imprint.html" class="link__footer--white"
                     >Impressum</a
+                  >
+                  <a href="my-subpage/contact.html" class="link__footer--white"
+                    >Datenschutz</a
                   >
                 </div>
               </div>
