add video and credits

--- a/src/my-subpage/imprint.html
+++ b/src/my-subpage/imprint.html
@@ -219,6 +219,11 @@
           Upon request we will provide you with information on all your data.
           You will find contact details under Responsibility.
         </p>
+
+        <h3 class="heading-tertiary--black u-margin-bottom-medium">credits</h3>
+        <p class="paragraph u-margin-bottom-big">
+          Stock video by Angor75 / MotionElements.com
+        </p>
       </section>
 
       <section class="section-footer">
