--- a/src/my-subpage/origin.html
+++ b/src/my-subpage/origin.html
@@ -93,11 +93,20 @@
 
       <section class="section-video">
         <div class="push-container">
-          <img
-            src="../img/video.png"
-            alt="coffee shop inside"
-            class="pseudo-video"
-          />
+          <video
+            src="../media/close-up-of-dark-roasted.mp4"
+            src="../media/close-up-of-dark-roasted.webm"
+            width="100%"
+            height="100%"
+            poster="../img/video.png"
+            autobuffer
+            controls
+          >
+            <div>
+              Dieser Browser unterstützt den HTML5 Video-Tag nicht. Nutzen Sie
+              stattdessen Chrome oder Firefox.
+            </div>
+          </video>
         </div>
       </section>
 
