--- a/src/index.html
+++ b/src/index.html
@@ -451,8 +451,9 @@
                   <a href="my-subpage/imprint.html" class="link__footer--white"
                     >Impressum</a
                   >
+                  <a href="#" class="link__footer--white">Datenschutz</a>
                   <a href="my-subpage/contact.html" class="link__footer--white"
-                    >Datenschutz</a
+                    >Kontakt</a
                   >
                 </div>
               </div>
