--- a/src/my-subpage/contact.html
+++ b/src/my-subpage/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
       Hier wird der Kaffee seit 1991, fair und bio, direkt im Herzen von Kiel produziert."
     />
     <meta name="keywords" content="Kiel, Kaffee, Rösterei, Café, bio, fair" />
-    <title>Rustica Rösterei & Café: Impressum</title>
+    <title>Rustica Rösterei & Café: Kontakt</title>
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
   <body>
@@ -114,17 +114,22 @@
                 <div class="form__group">
                   <input
                     type="text"
-                    class="form__input"
+                    class="form__input u-margin-bottom-medium"
                     placeholder="Was hast du auf dem Herzen"
                     id="message"
                   />
                   <label for="email" class="form__label">Deine Nachricht</label>
                 </div>
 
-                <div class="form__group u-margin-bottom-medium">
-                  <div class="form__checkbox u-margin-bottom-medium">
-                    <input type="checkbox" id="scales" name="scales" />
-                    <label for="scales"
+                <div class="form__group u-margin-bottom-big">
+                  <div class="form__checkbox u-margin-bottom-big">
+                    <input
+                      type="checkbox"
+                      id="subscribeNews"
+                      name="subscribe"
+                      value="newsletter"
+                    />
+                    <label for="subscribeNews"
                       >Ich akzeptiere die Datenschutzerklärung</label
                     >
                   </div>
@@ -187,9 +192,8 @@
                   <a href="imprint.html" class="link__footer--white"
                     >Impressum</a
                   >
-                  <a href="contact.html" class="link__footer--white"
-                    >Datenschutz</a
-                  >
+                  <a href="#" class="link__footer--white">Datenschutz</a>
+                  <a href="contact.html" class="link__footer--white">Kontakt</a>
                 </div>
               </div>
             </div>
