--- a/src/my-subpage/shop.html
+++ b/src/my-subpage/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -139,9 +139,8 @@
                   <a href="imprint.html" class="link__footer--white"
                     >Impressum</a
                   >
-                  <a href="contact.html" class="link__footer--white"
-                    >Datenschutz</a
-                  >
+                  <a href="#" class="link__footer--white">Datenschutz</a>
+                  <a href="contact.html" class="link__footer--white">Kontakt</a>
                 </div>
               </div>
             </div>
