add checkbox and select

--- a/src/my-subpage/contact.html
+++ b/src/my-subpage/contact.html
@@ -10,6 +10,7 @@
     />
     <meta name="keywords" content="Kiel, Kaffee, Rösterei, Café, bio, fair" />
     <title>Rustica Rösterei & Café: Kontakt</title>
+
     <link rel="stylesheet" href="../css/main.scss" />
   </head>
   <body>
@@ -110,6 +111,23 @@
                   />
                   <label for="email" class="form__label">Telefonnummer</label>
                 </div>
+
+                <select class="classic">
+                  <option>Dein Betreff</option>
+                  <option>Fragen zur Lieferung</option>
+                  <option>Fragen zum Produkt</option>
+                  <option>Vertriebsfragen</option>
+                  <option>einfach nur so!</option>
+                </select>
+                <br /><br />
+
+                <select class="minimal">
+                  <option>Dein Betreff</option>
+                  <option>Fragen zur Lieferung</option>
+                  <option>Fragen zum Produkt</option>
+                  <option>Vertriebsfragen</option>
+                  <option>einfach nur so!</option>
+                ><br /><br />
 
                 <div class="form__group">
                   <input
