--- a/src/my-subpage/contact.html
+++ b/src/my-subpage/contact.html
@@ -80,39 +80,45 @@
             </div>
             <div class="col-1-of-2">
               <form action="#" class="form">
-                <div class="form__group">
+                <div class="form__group u-margin-bottom-big">
+                  <label for="name" class="form__label u-margin-bottom-small"
+                    >Name*</label
+                  >
                   <input
                     type="text"
-                    class="form__input"
+                    class="form__input u-margin-bottom-medium"
                     placeholder="Name"
                     id="name"
                     required
                   />
-                  <label for="name" class="form__label">Name*</label>
                 </div>
 
-                <div class="form__group">
+                <div class="form__group u-margin-bottom-big">
+                  <label for="email" class="form__label u-margin-bottom-small"
+                    >E-Mail*</label
+                  >
                   <input
                     type="email"
-                    class="form__input"
+                    class="form__input u-margin-bottom-medium"
                     placeholder="E-Mail"
                     id="email"
                     required
                   />
-                  <label for="email" class="form__label">E-Mail*</label>
                 </div>
 
-                <div class="form__group">
+                <div class="form__group u-margin-bottom-big">
+                  <label for="email" class="form__label u-margin-bottom-small"
+                    >Telefonnummer</label
+                  >
                   <input
                     type="number"
-                    class="form__input"
+                    class="form__input u-margin-bottom-medium"
                     placeholder="Telefonnummer"
                     id="phone"
                   />
-                  <label for="email" class="form__label">Telefonnummer</label>
                 </div>
 
-                <select class="classic">
+                <select class="classic u-margin-bottom-medium">
                   <option>Dein Betreff</option>
                   <option>Fragen zur Lieferung</option>
                   <option>Fragen zum Produkt</option>
@@ -121,6 +127,7 @@
                 </select>
                 <br /><br />
 
+                <!--
                 <select class="minimal">
                   <option>Dein Betreff</option>
                   <option>Fragen zur Lieferung</option>
@@ -128,15 +135,16 @@
                   <option>Vertriebsfragen</option>
                   <option>einfach nur so!</option>
                 ><br /><br />
+-->
 
                 <div class="form__group">
+                  <label for="email" class="form__label">Deine Nachricht</label>
                   <input
                     type="text"
                     class="form__input u-margin-bottom-medium"
                     placeholder="Was hast du auf dem Herzen"
                     id="message"
                   />
-                  <label for="email" class="form__label">Deine Nachricht</label>
                 </div>
 
                 <div class="form__group u-margin-bottom-big">
